crates/floe-core/tests/snapshots/snapshot_codegen__snapshot_result_option.snap
---
source: tests/snapshot_codegen.rs
expression: output
---
const ok = { ok: true as const, value: 42 };

const err = { ok: false as const, error: "failed" };

const some = "hello";

const none = undefined;
