crates/floe-core/tests/snapshots/snapshot_codegen__snapshot_stdlib.snap
---
source: tests/snapshot_codegen.rs
assertion_line: 121
expression: output
---
function __floeEq(a: unknown, b: unknown): boolean {
  if (a === b) return true;
  if (a == null || b == null) return false;
  if (typeof a !== "object" || typeof b !== "object") return false;
  const ka = Object.keys(a as object);
  const kb = Object.keys(b as object);
  if (ka.length !== kb.length) return false;
  return ka.every((k) => __floeEq((a as Record<string, unknown>)[k], (b as Record<string, unknown>)[k]));
}

const _sorted = [...[3, 1, 2]].sort((a, b) => a - b);

const _sorted_by = [...[3, 1, 2]].sort((a, b) => ((n) => n)(a) - ((n) => n)(b));

const _mapped = [1, 2, 3].map((n) => n * 2);

const _filtered = [1, 2, 3, 4].filter((n) => n > 2);

const _found = [1, 2, 3].find((n) => __floeEq(n, 2));

const _found_idx = (() => { const _i = [1, 2, 3].findIndex((n) => __floeEq(n, 2)); return _i === -1 ? undefined : _i; })();

const _flat_mapped = [1, 2].flatMap((n) => [n, n * 10]);

const _at = [1, 2, 3][1];

const _has = [1, 2, 3].some((_item) => __floeEq(_item, 2));

const _first = [1, 2, 3][0];

const _last_item = [1, 2, 3][[1, 2, 3].length - 1];

const _taken = [1, 2, 3, 4, 5].slice(0, 3);

const _dropped = [1, 2, 3, 4, 5].slice(2);

const _reversed = [...[1, 2, 3]].reverse();

const _reduced = [1, 2, 3].reduce(0, (acc, n) => acc + n);

const _len = [1, 2, 3].length;

const _zipped = [1, 2].map((_v, _i) => [_v, ["a", "b"][_i]] as const);

const _opt_mapped = 42 != null ? ((n) => n * 2)(42) : undefined;

const _opt_flat = 42 != null ? ((n) => n * 2)(42) : undefined;

const _opt_unwrap = undefined != null ? undefined : 0;

const _opt_some = 1 != null;

const _opt_none = undefined == null;

const _opt_to_res = 42 != null ? { ok: true as const, value: 42 } : { ok: false as const, error: "not found" };

const _opt_or = undefined != null ? undefined : 99;

const _opt_values = (() => { const _a = [1, undefined, 3]; const _r = []; for (const _v of _a) { if (_v != null) _r.push(_v); } return _r; })();

const _res_mapped = { ok: true as const, value: 42 }.ok ? { ok: true as const, value: ((n) => n + 1)({ ok: true as const, value: 42 }.value) } : { ok: true as const, value: 42 };

const _res_map_err = { ok: false as const, error: "bad" }.ok ? { ok: false as const, error: "bad" } : { ok: false as const, error: ((e) => e)({ ok: false as const, error: "bad" }.error) };

const _res_flat = { ok: true as const, value: 42 }.ok ? ((n) => ({ ok: true as const, value: n + 1 }))({ ok: true as const, value: 42 }.value) : { ok: true as const, value: 42 };

const _res_unwrap = { ok: false as const, error: "fail" }.ok ? { ok: false as const, error: "fail" }.value : 0;

const _res_ok = { ok: true as const, value: 1 }.ok;

const _res_err = !{ ok: false as const, error: "fail" }.ok;

const _res_to_opt = { ok: true as const, value: 42 }.ok ? { ok: true as const, value: 42 }.value : undefined;

const _res_or = { ok: false as const, error: "fail" }.ok ? { ok: false as const, error: "fail" } : { ok: true as const, value: 42 };

const _res_values = (() => { const _a = [{ ok: true as const, value: 1 }, { ok: false as const, error: "x" }, { ok: true as const, value: 3 }]; const _r = []; for (const _v of _a) { if (_v.ok) _r.push(_v.value); } return _r; })();

const _res_partition = (() => { const _a = [{ ok: true as const, value: 1 }, { ok: false as const, error: "x" }, { ok: true as const, value: 3 }]; const _ok = []; const _err = []; for (const _v of _a) { if (_v.ok) _ok.push(_v.value); else _err.push(_v.error); } return [_ok, _err] as const; })();

const _trimmed = "  hello  ".trim();

const _trim_s = "  hello".trimStart();

const _trim_e = "hello  ".trimEnd();

const _split = "a,b,c".split(",");

const _replaced = "hello".replace("l", "r");

const _starts = "hello".startsWith("he");

const _ends = "hello".endsWith("lo");

const _str_has = "hello world".includes("world");

const _upper = "hello".toUpperCase();

const _lower = "HELLO".toLowerCase();

const _str_len = "hello".length;

const _sliced = "hello".slice(1, 3);

const _pad_s = "42".padStart(5, "0");

const _pad_e = "hi".padEnd(5, "!");

const _repeated = "ha".repeat(3);

const _parsed = (() => { const _n = Number("42"); return Number.isNaN(_n) || "42".trim() === "" ? { ok: false as const, error: { message: `Failed to parse "${"42"}" as number` } } : { ok: true as const, value: _n }; })();

const _clamped = Math.min(Math.max(15, 0), 10);

const _finite = Number.isFinite(42);

const _integer = Number.isInteger(3.14);

const _fixed = 3.14159.toFixed(2);

const _str_num = String(42);

console.log("hello");

console.warn("warning");

console.error("error");

console.info("info");

console.debug("debug");

console.time("timer");

console.timeEnd("timer");

const _floored = Math.floor(3.7);

const _ceiled = Math.ceil(3.2);

const _rounded = Math.round(3.5);

const _abs_val = Math.abs(-5);

const _min_val = Math.min(1, 2);

const _max_val = Math.max(1, 2);

const _power = Math.pow(2, 3);

const _root = Math.sqrt(16);

const _sgn = Math.sign(-5);

const _truncated = Math.trunc(3.9);

const _ln = Math.log(1);

const _sine = Math.sin(0);

const _cosine = Math.cos(0);

const _tangent = Math.tan(0);

const _json_str = JSON.stringify([1, 2, 3]);

const _json_parsed = (() => { try { return { ok: true as const, value: JSON.parse("{}") }; } catch (e) { return { ok: false as const, error: { message: String(e) } }; } })();

const _set = new Set([1, 2, 3]);

const _set_arr = [..._set];

const _set_added = new Set([..._set, 4]);

const _set_removed = new Set([..._set].filter(x => x !== 2));

const _set_has = _set.has(1);

const _set_size = _set.size;

const _set_empty = _set.size === 0;

const _set2 = new Set([2, 3, 4]);

const _set_union = new Set([..._set, ..._set2]);

const _set_inter = new Set([..._set].filter(x => _set2.has(x)));

const _set_diff = new Set([..._set].filter(x => !_set2.has(x)));

const _date_now = new Date();

const _date_from = new Date("2024-01-15");

const _date_from_ms = new Date(1705276800000);

const _date_year = _date_now.getFullYear();

const _date_month = (_date_now.getMonth() + 1);

const _date_day = _date_now.getDate();

const _date_hour = _date_now.getHours();

const _date_minute = _date_now.getMinutes();

const _date_second = _date_now.getSeconds();

const _date_millis = _date_now.getTime();

const _date_iso = _date_now.toISOString();

const _piped = [...[3, 1, 2]].sort((a, b) => a - b);

const _pipe_chain = [...[1, 2, 3, 4, 5].filter((n) => n > 2).map((n) => n * 10)].reverse();

const _pipe_opt = 10 != null ? ((n) => n + 1)(10) : undefined;

const _pipe_str = "  hello  ".trim();

const _pipe_num = (() => { const _n = Number("42"); return Number.isNaN(_n) || "42".trim() === "" ? { ok: false as const, error: { message: `Failed to parse "${"42"}" as number` } } : { ok: true as const, value: _n }; })();

const _pipe_date = new Date().toISOString();
