crates/floe-core/tests/snapshots/snapshot_codegen__snapshot_trait_constrained_generics_cross_file.snap
---
source: crates/floe-core/tests/snapshot_codegen.rs
expression: output
---
interface Repo {
  findById(id: number): string;
}
import "./repo";

import { type DrizzleRepo, DrizzleRepo__findById, DrizzleRepo__make } from "./impl";

function doWork<R extends Repo>(repo: R, id: number): string {
  return repo.findById(id);
}

export function run(): string {
  const repo = DrizzleRepo__make({ db: "x" });
  return doWork(repo, 1);
}
