crates/floe-core/tests/snapshots/snapshot_codegen__snapshot_trait_import_emits_no_binding.snap
---
source: crates/floe-core/tests/snapshot_codegen.rs
expression: output
---
import "./label";

import { type Tag, Tag__label, Tag__make } from "./tag";

export function render(t: Tag): string {
  return Tag__label(t);
}
