crates/floe-core/tests/snapshots/snapshot_codegen__snapshot_traits.snap
---
source: tests/snapshot_codegen.rs
expression: output
---
function __floeEq(a: unknown, b: unknown): boolean {
  if (a === b) return true;
  if (a == null || b == null) return false;
  if (typeof a !== "object" || typeof b !== "object") return false;
  const ka = Object.keys(a as object);
  const kb = Object.keys(b as object);
  if (ka.length !== kb.length) return false;
  return ka.every((k) => __floeEq((a as Record<string, unknown>)[k], (b as Record<string, unknown>)[k]));
}





type User = { name: string; age: number };

export function User__display(self: User): string {
  return `${self.name} (${self.age})`;
}
export function User__make(__data: User): User {
  return {
    ...__data,
    display: () => User__display(__data),
    eq: (other: string) => User__eq(__data, other),
  };
}

export function User__eq(self: User, other: string): boolean {
  return __floeEq(self.name, other);
}

function User__greet(self: User, greeting: string): string {
  return `${greeting}, ${self.name}!`;
}
