crates/floe-core/tests/snapshots/snapshot_codegen__snapshot_types.snap
---
source: crates/floe-core/tests/snapshot_codegen.rs
expression: output
---
type User = { id: string; name: string; email: string };

type Status = { __tag: "Active" } | { __tag: "Inactive"; reason: string } | { __tag: "Suspended"; value: string } | { __tag: "Error"; _0: number; _1: string };

type UserId = { __tag: "UserId"; value: string };
